appId: com.mobilesaas.app.dev
---
- launchApp:
    clearState: true
- tapOn: "Learn more"
- assertVisible: "Welcome back!"
- tapOn: "Email"
- inputText: "user@example.com"
- tapOn: "Password"
- inputText: "s3cure-password"
- tapOn: "Sign in"
- assertVisible: "Home"
- tapOn: "Settings"
- tapOn: "Sign out"
- assertVisible: "Welcome back!"
